# dojo-harvester

./: .dockerignore  .gitignore  CLAUDE.md  GEMINI.md  README.md  docker-compose.yml
.specify/memory/: constitution.md
backend/: go.mod  go.sum
backend/cmd/server/: main.go
backend/config/: config.yaml
backend/data/badger/: 000003.vlog  000004.vlog  KEYREGISTRY
backend/internal/api/: datasets.go  recording.go  server.go  sessions.go  tasks.go  telemetry.go  uploads.go
backend/internal/config/: config.go
backend/internal/executor/: executor.go
backend/internal/logger/: logger.go
backend/internal/storage/: dataset.go  models.go  session.go  storage.go  tasks.go  upload.go
backend/internal/uploader/: uploader.go
backend/internal/websocket/: manager.go
backend/pkg/proto/: command.pb.go  status.pb.go  telemetry.pb.go
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: ConversionStatusPage.tsx  LoginPage.tsx  (+4 more)
shared/proto/: command.proto  status.proto  telemetry.proto
specs/001-data-harvest-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-task-kanban/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
toolkit/: main.py  pyproject.toml
toolkit/scripts/: convert.sh  record.sh  upload_local.sh
toolkit/src/converter/: lerobot_convert.py
toolkit/src/proto/: command_pb2.py  command_pb2_grpc.py  status_pb2.py  status_pb2_grpc.py  telemetry_pb2.py
(+15 files in other folders)
