[project]
name = "toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "grpcio-tools>=1.78.0",
    "lerobot>=0.5.0",
    "mcap>=1.3.1",
    "pyarrow>=23.0.1",
    "rosbags>=0.11.0",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
